overflow correction

--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,4 +1,6 @@
 body {
+  overflow-x: hidden;
+  
  --background: hsl(0, 0%, 87%);
  --card-background: hsl(0, 0%, 100%);
  --background-thin: hsla(0, 0%, 100%, 0.6);
